test : more tests added